Attenpt to fix landscape on mobile. Seems to be partial success.

--- a/style.css
+++ b/style.css
@@ -382,34 +382,35 @@ div.resetDeck {
   }
 }
 
-/* @media screen and (min-width: 320px) and (max-height: 450px) and (orientation: landscape) {
+@media screen and (min-width: 450px) and (max-height: 450px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
     width: 100vh;
+    height: 100vw;
     overflow-x: hidden;
     position: absolute;
     top: 100%;
     left: 0;
   }
 
-  .table{
+  /* .table{
     height: 200vh;
     width: auto;
     margin: 0;
     position: absolute;
-  }
+  } */
 
   .deck{
-    margin-top: -75px;
+    /* margin-top: -75px;
     max-height: 80vw;
     z-index: 1;
 
-    max-width: 100vh;
+    max-width: 100vh; */
     transform: none;
   }
-  .card {
+  /* .card {
     transform: scale(0.75);
     margin: -11px -11px;
-  }
-} */
+  } */
+}
